2008-09-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/userstats.py (UserStats): Created class and file.

2008-09-10  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/pokerpackets.py: Added info about tourney break
	packets to Q&A comments at top of file.

	* tests/test-pokerservice.py.in
	(BreakTestCase.test_tourneyBreakResume): Renamed test to
	test11_tourneyBreakResume.
	(BreakTestCase.test11_tourneyBreakResume): Changed test to handle
	additional table.broadcast()'d packets.
	(BreakTestCase.Table.broadcastMessage): Added self.type assignment.
	(BreakTestCase.Table.__init__): Added self.type assignment.

	* pokernetwork/pokerservice.py (PokerService.tourneyBreakResume):
	Added table.broadcast of PacketPokerTableTourneyBreakDone.

2008-09-09  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in (BreakTestCase.test08_tourneyNewState_tourneyBreak):
	Wrote test, coverage for changes below in pokerservice.py

2008-09-08  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(BreakTestCase.test01_tourneyNewState_noCallbacksNeeded): Renamed
	test to test01_tourneyNewState_simpleTransitions.

	* pokernetwork/pokerservice.py (PokerService.tourneyNewState):
	send PacketPokerTableTourneyBreakBegin() to all games when
	new_state is TOURNAMENT_STATE_BREAK.

	* pokernetwork/pokerpackets.py
	(PacketPokerTableTourneyBreakStart): Create packet type.
	(PacketPokerTableTourneyBreakDone): Created packet type.

2008-09-08  Loic Dachary <loic@dachary.org>

 	* Release 1.7.0

	* database/1.6.0-1.7.0.sql, database/schema.sql.in,
	  pokernetwork/pokerpackets.py, pokernetwork/pokerservice.py: .
	  Documentation for monitor table and fields.
	  . Fill the third field of the monitor table.
	* tests/test-pokersite.py.in: PokerServiceMockup must provide
	  getClientQueuedPacketMax
	* tests/test-pokermemcache.py.in: include from @srcdir@
	* pokernetwork/pokermemcache.py: extract memcache wrapper from
	  pokersite.py